2024provq1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skills-msa1
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: skills-msa1
  template:
    metadata:
      labels:
        app: skills-msa1
    spec:
      containers:
        - name: skills-msa1
          image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/skills-msa1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
