2024provq1/manifests/service-fargate.yaml
apiVersion: v1
kind: Service
metadata:
  name: fargate-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/hello"
spec:
  selector:
    app: fargate-app
  ports:
    - port: 8080 # 서비스가 생성할 포트
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
